# Raytracer

./: .gitignore  Cargo.toml  Config.toml  README.md  attribution.txt
output/: 1_linedrawing_rgb.ppm  2_object_reader_rgb.ppm  3_raytracing_depth.ppm  3_raytracing_rgb.ppm  4_phong_material_rgb.ppm  7_ambient_occlusion_depth.ppm  7_ambient_occlusion_rgb.ppm  8_photon_mapping_rgb_back.ppm  final_image_rgb_back.ppm  final_image_rgb_front.ppm  final_image_rgb_front_done.ppm  final_image_rgb_front_final.ppm  quick_final_image_rgb_front.ppm  showcase_rgb_back.ppm  showcase_rgb_front.ppm  showcase_rgb_front_ambient_occlusion.ppm  showcase_rgb_front_b.ppm  showcase_rgb_front_caustic.ppm  showcase_rgb_front_without.ppm
src/: config.rs  lib.rs  main.rs
src/cameras/: full_camera.rs  mod.rs  sampling_camera.rs  simple_camera.rs
src/core/: camera.rs  colour.rs  environment.rs  framebuffer.rs  hit.rs  light.rs  linedrawer.rs  material.rs  mod.rs  object.rs  ray.rs  sampler.rs  scene.rs  tex_coords.rs  transform.rs  vector.rs  vertex.rs
src/environments/: mod.rs  photon_scene.rs  scene.rs
src/geometry/: csg.rs  mod.rs  plane.rs  polymesh.rs  quadratic.rs  scene_object.rs  sphere.rs  traits.rs
src/graphics/: linedrawer.rs  mod.rs
src/lights/: directional_light.rs  point_light.rs
src/materials/: ambient_occlusion_material.rs  compound_material.rs  falsecolour.rs  falsecolour_material.rs  global_material.rs  mod.rs  phong.rs  phong_material.rs  photon_mapping_material.rs
src/objects/: csg_object.rs  mod.rs  plane.rs  plane_object.rs  polymesh.rs  polymesh_object.rs  (+3 more)
(+39 files in other folders)
