[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.9"
kd-tree = { version = "0.6.0", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sortedlist-rs = "0.2.2"
thiserror = "1.0.63"
toml = "0.8"
typenum = "1.17.0"

[dev-dependencies]
approx = "0.5"

[features]
debugging = []
